fix: change z-index for calendar to appear on top of other components

--- a/src/shared/ui/datePicker/DatePicker.module.scss
+++ b/src/shared/ui/datePicker/DatePicker.module.scss
@@ -199,7 +199,7 @@
 }
 
 .popper {
-  z-index: 10000;
+  z-index: 1000000;
 }
 
 .day {
